--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,22 @@
-add_library(gl_tools
+add_library(gl_tools STATIC
     core/application.cpp
 
-    engine/base_engine.cpp
-    engine/gl_engine.cpp
+    renderer/base_renderer.cpp
+    renderer/gl_renderer.cpp
 
     ui/editor.cpp
     ui/ui.cpp
 
     utils/functions.cpp
     utils/camera.cpp
-    utils/model.cpp
-        shader/shader.cpp
     utils/types.cpp
-        shader/compute.cpp
     utils/common_primitives.cpp
-        shader/update_listener.cpp
-        shader/update_listener.h
+
+    assets/model.cpp
+
+    shader/shader.cpp
+    shader/update_listener.cpp
+        renderer/base_renderer.h
 )
 
 add_executable(demo
@@ -31,10 +32,8 @@ target_include_directories(demo PUBLIC
 
 # Assimp from vcpkg or other package manager
 find_package(assimp CONFIG REQUIRED)
-find_package(SDL2 REQUIRED COMPONENTS SDL2)
-
 set(EFSW_LIB "${PROJECT_SOURCE_DIR}/libs/efsw/efsw.lib")
 
-target_link_libraries(gl_tools glad glm stb_image imgui imGuizmo SDL2::SDL2 assimp::assimp ${EFSW_LIB})
+target_link_libraries(gl_tools PUBLIC glad glm stb_image imgui imGuizmo SDL2::SDL2 assimp::assimp ${EFSW_LIB})
 
-target_link_libraries(demo gl_tools)
+target_link_libraries(demo PUBLIC gl_tools)
