Refactored model class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,8 @@ add_library(gl_tools STATIC
     shader/shader.cpp
     shader/update_listener.cpp
         renderer/base_renderer.h
+        assets/mesh.cpp
+        assets/mesh.h
 )
 
 add_executable(demo
