--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,10 @@ add_library(gl_tools STATIC
         renderer/base_renderer.h
         assets/mesh.cpp
         assets/mesh.h
+        assets/asset_converter.cpp
+        assets/asset_converter.h
+        assets/asset_file.cpp
+        assets/asset_file.h
 )
 
 add_executable(demo
@@ -32,10 +36,18 @@ target_include_directories(demo PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${PROJECT_SOURCE_DIR}/include)
 
-# Assimp from vcpkg or other package manager
+# Libraries from vcpkg or other package manager
 find_package(assimp CONFIG REQUIRED)
 set(EFSW_LIB "${PROJECT_SOURCE_DIR}/libs/efsw/efsw.lib")
+find_package(lz4 CONFIG REQUIRED)
+find_package(efsw CONFIG REQUIRED)
 
-target_link_libraries(gl_tools PUBLIC glad glm stb_image imgui imGuizmo SDL2::SDL2 assimp::assimp ${EFSW_LIB})
+include(FetchContent)
+
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
+FetchContent_MakeAvailable(json)
+
+target_link_libraries(gl_tools PUBLIC glad glm stb_image imgui imGuizmo
+        SDL2::SDL2 assimp::assimp efsw::efsw nlohmann_json::nlohmann_json lz4::lz4)
 
 target_link_libraries(demo PUBLIC gl_tools)
