--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -33,6 +33,7 @@ jobs:
           vcpkg install lz4
           vcpkg install assimp
           vcpkg install sdl2
+          vcpkg integrate install
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
