--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git clone https://github.com/microsoft/vcpkg
           ./vcpkg/bootstrap-vcpkg.bat
-          vcpkg install esfw
+          vcpkg install efsw
           vcpkg install lz4
           vcpkg install assimp
           vcpkg install sdl2
